fix: wrap preview grid to 50px

--- a/amundsen_application/static/js/components/TableDetail/DataPreviewButton/styles.scss
+++ b/amundsen_application/static/js/components/TableDetail/DataPreviewButton/styles.scss
@@ -46,7 +46,9 @@
         font-size: 12px;
         height: 32px;
         justify-content: center;
+        max-width: 50px;
         min-width: 0;
+        overflow-wrap: break-word;
         padding: 8px;
         text-align: center;
         white-space: nowrap;
